@@ -1,3 +1,6 @@
+[B]Version 0.1.2[/B]
+- Now uses library module for Danish addons
+
 [B]Version 0.1.1[/B]
 - Fix loading on Windows
 
